Fixed whitespace issue in IE

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -612,7 +612,7 @@ a[data-title]:hover:after {
   		width: 500px;
   		.inventory-viewer {
   			width: 500px;
-  			height: initial;
+  			height: 282px;
   		}
   		.inventory-info {
   			width: 500px;
@@ -695,6 +695,7 @@ a[data-title]:hover:after {
   		width: 300px;
   		.inventory-viewer {
   			width: 300px;
+  			height: 170px;
   		}
   		.inventory-info {
   			width: 300px;
